文言の修正

--- a/src/_locales/ja/messages.json
+++ b/src/_locales/ja/messages.json
@@ -1,6 +1,6 @@
 {
   "Description": {
-    "message": "開いているタブを1つにまとめて、メモリ消費を抑えます。アカウントごとにデータは同期して複数端末で同じ記録を使えます。"
+    "message": "開いているタブを1つにまとめて、メモリ消費を抑えます。アカウントごとにデータは同期され、複数端末で同じデータを共有できます。"
   },
   "content_msg_tab_length": {
     "message": "$length$個のタブ",
